2008-03-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent.c (scan_for_column): Extract from current_column_1.
	Merge with the same code from Fmove_to_column.
	(current_column_1, Fmove_to_column): Use it.

2008-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (map_keymap_internal): New fun.
	(map_keymap): Use it.
	(Fmap_keymap_internal): New fun.
	(Fmap_keymap): Remove left-out test from before make_save_value.

	* keymap.c (Fmap_keymap): Use `map-keymap-sorted.

	* frame.c (Fmodify_frame_parameters, x_set_frame_parameters):
	Use XCAR/XCDR.

	* process.h (struct Lisp_Process): Remove filter_multibyte.
	* process.c (QCfilter_multibyte): Remove.
	(setup_process_coding_systems): Don't use filter_multibyte.
	(Fstart_process, Fmake_network_process): Don't set filter_multibyte.
	(read_process_output): Don't adjust multibyteness to filter_multibyte.
	(Fset_process_filter_multibyte): Change the coding-system to
	approximate the previous behavior.
	(Fprocess_filter_multibyte_p): Get the multibyteness straight from the
	coding-system.

	* coding.c (decode_coding_object): When not decoding into a buffer,
	obey the coding system's preference of (uni|multi)byte.

2008-03-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* casefiddle.c (casify_object): Avoid pathological N^2 worst case if
	every char is changed and has a different byte-length.
	(Fupcase_word, Fdowncase_word, Fcapitalize_word, operate_on_word):
	Fix int -> EMACS_INT.

2008-03-23  David Hansen  <david.hansen@gmx.net>  (tiny change)

	* dbusbind.c (xd_read_message): Remove extra copying of message
	strings.  Check for NULL `interface' or `member'.

2008-03-22  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (readdir): If FindFirstFile/FindNextFile return in
	cFileName a file name that includes `?' characters, use the 8+3
	alias in cAlternateFileName instead.

2008-03-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (enlarge_buffer_text): Fix int -> EMACS_INT.
